[package]
name = "ctld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ctld"
path = "src/main.rs"

[[bin]]
name = "dump"
path = "src/dump.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = { version = "0.29.0", features = [ "ioctl" ] }
quick-xml = {version = "0.32.0", features = ["serde"] }
strum = {version = "0.26.2", features = ["derive"] }
uclicious = "0.1.8"
