[package]
name = "ctld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ctld"
path = "src/main.rs"

[[bin]]
name = "dump"
path = "src/dump.rs"

[dependencies]
anyhow = "1.0.14"
clap = { version = "4.0", features = ["derive"] }
libnv = { version = "0.4.3", default-features = false, features = [ "libnv" ] }
nix = { version = "0.29.0", features = [ "ioctl" ] }
quick-xml = {version = "0.32.0", features = ["serialize"] }
serde = "1.0.119"
serde_derive = "1.0.119"
strum = {version = "0.26.2", features = ["derive"] }
uclicious = "0.1.8"

[patch.crates-io]
libnv = { git="https://github.com/asomers/libnv-rs", rev="b4b827f" }
